[package]
name = "mqtt_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
environ = { path = "../environ" }
influx_client= { path = "../influx_client" }
rumqttd = "0.9.0"
tokio = { version = "1.0", features = ["full"] }
confy = "0.4.0"
serde_json = "1.0.73"
bytes = "1.1.0"
log4rs = "1.0.0"
log = "0.4"